--- a/webp/index.html
+++ b/webp/index.html
@@ -4,7 +4,8 @@
     <title>CarDetectorExample</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="{{ url_for('ui', path='/styles.css') }}" />
+    
   </head>
   <body>
     <main id="info">
@@ -62,19 +63,19 @@
       <span id="slide-3"></span>
       <div class="image-container">
         <img
-          src="assets/test_1.jpg"
+          src="{{ url_for('ui', path='/assets/test_1.jpg') }}"
           class="slide"
           width="500"
           height="300"
         />
         <img
-          src="assets/test_2.jpg"
+          src="{{ url_for('ui', path='/assets/test_2.jpg') }}"
           class="slide"
           width="500"
           height="300"
         />
         <img
-          src="assets/test_3.jpg"
+          src="{{ url_for('ui', path='/assets/test_3.jpg') }}"
           class="slide"
           width="500"
           height="300"
