--- a/webp/index.html
+++ b/webp/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CarDetectorExample</title>
+    <title>CarS</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="icon" href="{{ url_for('ui', path='/favicon.ico') }}" type="image/ico"/>
     <link rel="stylesheet" href="{{ url_for('ui', path='/styles.css') }}" />
     
   </head>
